# My_CPU

./: README.md
Assembler/: CMakeLists.txt  commands.h  functions_asm.cpp  functions_asm.h  general_data.h  main.cpp  register.h
processor/: CMakeLists.txt  TXLin.h  commands_cpu.h  functions.cpp  functions.h  main.cpp  my_stack.cpp  my_stack.h
workspace_for_processor/: factorial.txt  makefile  quad.txt  text.txt  text1.txt  video.txt  video2.txt
